# latestrelayer

./: .env.example  .env.instance1  .env.instance2  .env.instance3  .gitignore  ARCHITECTURE.md  BIDIRECTIONAL_INPUT_SWITCHING_PLAN.md  CMakeLists.txt  CONTAINER_ARCHITECTURE.md  DRONE_INPUT_IMPLEMENTATION_PLAN.md  FAST_DEV_GUIDE.md  INPUT_NAMED_PIPE_MIGRATION.md  INPUT_PIPE_MIGRATION_PLAN.md  JITTER_DEBUG_IMPLEMENTATION.md  LICENSE.md  NAMED_PIPE_MIGRATION.md  NETWORK_GUIDE.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  REFACTOR_PLAN.md  ROADMAP.md  SCENE_SWITCHING_FIX_PLAN.md  SIGNAL_HANDLING_FIX.md  STREAM_HEALTH_MONITORING_PLAN.md  TESTING.md  TESTING_GUIDE.md  TSDUCK_BUILD_FIX.md  WEBSOCKET_ARCHITECTURE.md  config.yaml  convert-fallback.sh  docker-compose.yml  env.default  generate-fallback.sh  nginx-start.sh  nginx.conf  nginx.conf.template  splice.md  test-connectivity.sh  (+3 more)
compositor/: CPU_OPTIMIZATION_USAGE.md  Dockerfile  PROFILING_GUIDE.md  QUICK_REFERENCE.md  README.md  TEST_COMMANDS.md  VIDEO_FALLBACK_TESTING.md  compositor.py  entrypoint.sh  monitor_cpu.py  profiler.py
controller/: Dockerfile  IMPLEMENTATION_PLAN.md  container_controller.py
dashboard/: Dockerfile  README.md
docker/: Dockerfile.ffmpeg-fallback  Dockerfile.ffmpeg-kick  Dockerfile.ffmpeg-rtmp-input  Dockerfile.ffmpeg-rtmp-live  Dockerfile.ffmpeg-rtmp-output  Dockerfile.ffmpeg-srt-input  Dockerfile.ffmpeg-srt-live  Dockerfile.mock-camera  Dockerfile.mock-drone  Dockerfile.multiplexer  Dockerfile.pipe-init  convert-fallback.sh  entrypoint.sh  fallback-source-selector.sh  ffmpeg-fallback-health-check.sh  ffmpeg-fallback-wrapper.sh  ffmpeg-kick-health-check.sh  ffmpeg-kick-wrapper.sh  ffmpeg-rtmp-input-health-check.sh  ffmpeg-rtmp-input-wrapper.sh  ffmpeg-rtmp-live-health-check.sh  ffmpeg-rtmp-live-wrapper.sh  ffmpeg-rtmp-output-health-check.sh  ffmpeg-rtmp-output-wrapper.sh  ffmpeg-srt-input-health-check.sh  ffmpeg-srt-input-wrapper.sh  ffmpeg-srt-live-health-check.sh  ffmpeg-srt-live-wrapper.sh  generate-fallback.sh  health-check.sh  mock-camera-health-check.sh  mock-camera-wrapper.sh  mock-drone-health-check.sh  mock-drone-wrapper.sh  nginx-rtmp-health-check.sh  pipe-init.sh
ffmpeg-brb/: Dockerfile  entrypoint.sh
ffmpeg-cam-dev/: entrypoint.sh
ffmpeg-cam-normalized/: entrypoint.sh
ffmpeg-cam-relay/: Dockerfile  entrypoint.sh
ffmpeg-dev-cam/: Dockerfile  entrypoint.sh
ffmpeg-kick/: Dockerfile  README.md  entrypoint.sh  healthcheck.sh
ffmpeg-offline/: Dockerfile  entrypoint.sh
ffmpeg-relay/: Dockerfile  entrypoint.sh
ffmpeg-srt/: entrypoint.sh
multi2/: ARCHITECTURE.md  CMakeLists.txt  Dockerfile  README.md  convert_fallback.sh  docker-compose.yml  generate_fallback.sh  output.ts  source_direct.ts  splice.md  stream_tcp.sh
multi2/scripts/: test_stream.sh
multi2/src/: main.cpp  tcp_main.cpp
multi2/videos/: inputa.ts  inputb.ts
muxer/: Dockerfile  REFACTORING_PLAN.md  STARTUP_FIX_PLAN.md  rtmp_switcher.py
nginx-proxy/: Dockerfile  README.md  entrypoint.sh  health-check.sh  nginx.conf
nginx-rtmp/: Dockerfile  README.md  entrypoint.sh  nginx.conf
offline-browser/: Dockerfile  README.md  entrypoint.sh  healthcheck.sh
offline-image/: Dockerfile  README.md  entrypoint.sh  healthcheck.sh
offline-video/: Dockerfile  README.md  entrypoint.sh  healthcheck.sh
push-to-kick/: entrypoint.sh
relayer/: Dockerfile  README.md  config.py  entrypoint.sh  healthcheck.sh  http_api.py  main.py  pipeline_builder.py  privacy_manager.py  relayer_manager.py  srt_source_manager.py  state_manager.py  video_source_manager.py
shared/: fallback_config.json
src/: Config.cpp  Config.h  FIFOInput.cpp  FIFOInput.h  FIFOOutput.cpp  FIFOOutput.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  InputSourceManager.cpp  InputSourceManager.h  Multiplexer.cpp  Multiplexer.h  NALParser.cpp  NALParser.h  OutputTimestampMonitor.cpp  OutputTimestampMonitor.h  PIDMapper.cpp  PIDMapper.h  RTMPOutput.cpp  RTMPOutput.h  RTMPReceiver.cpp  RTMPReceiver.h  SPSPPSInjector.cpp  SPSPPSInjector.h  StreamHealthMetrics.h  StreamSplicer.cpp  StreamSplicer.h  StreamSwitcher.cpp  StreamSwitcher.h  TCPOutput.cpp  TCPOutput.h  TCPReader.cpp  TCPReader.h  TCPReceiver.cpp  TCPReceiver.h  TSAnalyzer.cpp  TSAnalyzer.h  TSPacketQueue.cpp  (+8 more)
srs/: Dockerfile  srs.conf
srt-switcher/: ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  TESTING.md  api_server.py  config.py  entrypoint.sh  ffmpeg_process.py  gstreamer_elements.py  gstreamer_simple.py  srt_monitor.py  stream_switcher.py  switcher.py
stream-auto-switcher/: Dockerfile  auto_switcher.py
stream-controller/: Dockerfile  IMPLEMENTATION_PLAN.md  container_controller.py
stream-dashboard/: .dockerignore  Dockerfile  README.md
stream-switcher/: Dockerfile  REFACTORING_PLAN.md  rtmp_switcher.py
supervisor/: Dockerfile  requirements.txt  (+1 more)
(+45 files in other folders)
